--- a/BingApi/BingApi.csproj
+++ b/BingApi/BingApi.csproj
@@ -4,6 +4,7 @@
   </PropertyGroup>
   <ItemGroup>    
     <PackageReference Include="Microsoft.Azure.CognitiveServices.Language" Version="1.0.1-preview" />    
+    <PackageReference Include="Microsoft.Azure.DocumentDB" Version="1.22.0" />    
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.2" />    
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
